added width for footer-text

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="header-page">
       <div class="container container-menu">
         <nav class="nav-menu">
           <a href="./index.html" class="logo link"
