--- a/index.html
+++ b/index.html
@@ -186,13 +186,15 @@
     </main>
     <footer class="end-page">
       <div class="container">
-        <a href="./index.html" class="footer-logo link"
-          >Web<span class="footer-part">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-content">
+          <a href="./index.html" class="footer-logo link"
+            >Web<span class="footer-part">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
