--- a/portfolio.html
+++ b/portfolio.html
@@ -75,175 +75,157 @@
           </ul>
           <ul class="works-list list">
             <li class="card-item">
-              <article class="card">
-                <a href="" class="work-link link">
-                  <div class="card-thumb">
-                    <img
-                      src="./images/banking.jpg"
-                      alt="Banking"
-                      width="360"
-                      height="300"
-                      class="img-work"
-                    />
-                  </div>
-                  <div class="content">
-                    <h2 class="card-title">Banking App Interface Concept</h2>
-                    <p class="card-text">App</p>
-                  </div>
-                </a>
-              </article>
+              <a href="" class="work-link link">
+                <div class="card-thumb">
+                  <img
+                    src="./images/banking.jpg"
+                    alt="Banking"
+                    width="360"
+                    height="300"
+                    class="img-work"
+                  />
+                </div>
+                <div class="content">
+                  <h2 class="card-title">Banking App Interface Concept</h2>
+                  <p class="card-text">App</p>
+                </div>
+              </a>
             </li>
             <li class="card-item">
-              <article class="card">
-                <a href="" class="work-link link">
-                  <div class="card-thumb">
-                    <img
-                      src="./images/mobyle.jpg"
-                      alt="Payment with mobile phone "
-                      width="360"
-                      height="300"
-                      class="img-work"
-                    />
-                  </div>
-                  <div class="content">
-                    <h2 class="card-title">Cashless Payment</h2>
-                    <p class="card-text">Marketing</p>
-                  </div>
-                </a>
-              </article>
+              <a href="" class="work-link link">
+                <div class="card-thumb">
+                  <img
+                    src="./images/mobyle.jpg"
+                    alt="Payment with mobile phone "
+                    width="360"
+                    height="300"
+                    class="img-work"
+                  />
+                </div>
+                <div class="content">
+                  <h2 class="card-title">Cashless Payment</h2>
+                  <p class="card-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="card-item">
-              <article class="card">
-                <a href="" class="work-link link">
-                  <div class="card-thumb">
-                    <img
-                      src="./images/meditation.jpg"
-                      alt="Laptop and mobile phone"
-                      width="360"
-                      height="300"
-                      class="img-work"
-                    />
-                  </div>
-                  <div class="content">
-                    <h2 class="card-title">Meditation App</h2>
-                    <p class="card-text">App</p>
-                  </div>
-                </a>
-              </article>
+              <a href="" class="work-link link">
+                <div class="card-thumb">
+                  <img
+                    src="./images/meditation.jpg"
+                    alt="Laptop and mobile phone"
+                    width="360"
+                    height="300"
+                    class="img-work"
+                  />
+                </div>
+                <div class="content">
+                  <h2 class="card-title">Meditation App</h2>
+                  <p class="card-text">App</p>
+                </div>
+              </a>
             </li>
             <li class="card-item">
-              <article class="card">
-                <a href="" class="work-link link">
-                  <div class="card-thumb">
-                    <img
-                      src="./images//taxi.jpg"
-                      alt="A car with mobile phone"
-                      width="360"
-                      height="300"
-                      class="img-work"
-                    />
-                  </div>
-                  <div class="content">
-                    <h2 class="card-title">Taxi Service</h2>
-                    <p class="card-text">Marketing</p>
-                  </div>
-                </a>
-              </article>
+              <a href="" class="work-link link">
+                <div class="card-thumb">
+                  <img
+                    src="./images//taxi.jpg"
+                    alt="A car with mobile phone"
+                    width="360"
+                    height="300"
+                    class="img-work"
+                  />
+                </div>
+                <div class="content">
+                  <h2 class="card-title">Taxi Service</h2>
+                  <p class="card-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="card-item">
-              <article class="card">
-                <a href="" class="work-link link">
-                  <div class="card-thumb">
-                    <img
-                      src="./images/screen.jpg"
-                      alt="Space on the lockscreen of a mobile phone"
-                      width="360"
-                      height="300"
-                      class="img-work"
-                    />
-                  </div>
-                  <div class="content">
-                    <h2 class="card-title">Screen Illustrations</h2>
-                    <p class="card-text">Design</p>
-                  </div>
-                </a>
-              </article>
+              <a href="" class="work-link link">
+                <div class="card-thumb">
+                  <img
+                    src="./images/screen.jpg"
+                    alt="Space on the lockscreen of a mobile phone"
+                    width="360"
+                    height="300"
+                    class="img-work"
+                  />
+                </div>
+                <div class="content">
+                  <h2 class="card-title">Screen Illustrations</h2>
+                  <p class="card-text">Design</p>
+                </div>
+              </a>
             </li>
             <li class="card-item">
-              <article class="card">
-                <a href="" class="work-link link">
-                  <div class="card-thumb">
-                    <img
-                      src="./images/courses.jpg"
-                      alt="Young woman listening lesson on mobile phone"
-                      width="360"
-                      height="300"
-                      class="img-work"
-                    />
-                  </div>
-                  <div class="content">
-                    <h2 class="card-title">Online Courses</h2>
-                    <p class="card-text">Marketing</p>
-                  </div>
-                </a>
-              </article>
+              <a href="" class="work-link link">
+                <div class="card-thumb">
+                  <img
+                    src="./images/courses.jpg"
+                    alt="Young woman listening lesson on mobile phone"
+                    width="360"
+                    height="300"
+                    class="img-work"
+                  />
+                </div>
+                <div class="content">
+                  <h2 class="card-title">Online Courses</h2>
+                  <p class="card-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="card-item">
-              <article class="card">
-                <a href="" class="work-link link">
-                  <div class="card-thumb">
-                    <img
-                      src="./images/instagram.jpg"
-                      alt="Instagram stories"
-                      width="360"
-                      height="300"
-                      class="img-work"
-                    />
-                  </div>
-                  <div class="content">
-                    <h2 class="card-title">Instagram Stories Concept</h2>
-                    <p class="card-text">Design</p>
-                  </div>
-                </a>
-              </article>
+              <a href="" class="work-link link">
+                <div class="card-thumb">
+                  <img
+                    src="./images/instagram.jpg"
+                    alt="Instagram stories"
+                    width="360"
+                    height="300"
+                    class="img-work"
+                  />
+                </div>
+                <div class="content">
+                  <h2 class="card-title">Instagram Stories Concept</h2>
+                  <p class="card-text">Design</p>
+                </div>
+              </a>
             </li>
             <li class="card-item">
-              <article class="card">
-                <a href="" class="work-link link">
-                  <div class="card-thumb">
-                    <img
-                      src="./images/food.jpg"
-                      alt="Woman carries vegetables on her bag"
-                      width="360"
-                      height="300"
-                      class="img-work"
-                    />
-                  </div>
-                  <div class="content">
-                    <h2 class="card-title">Organic Food</h2>
-                    <p class="card-text">Web Site</p>
-                  </div>
-                </a>
-              </article>
+              <a href="" class="work-link link">
+                <div class="card-thumb">
+                  <img
+                    src="./images/food.jpg"
+                    alt="Woman carries vegetables on her bag"
+                    width="360"
+                    height="300"
+                    class="img-work"
+                  />
+                </div>
+                <div class="content">
+                  <h2 class="card-title">Organic Food</h2>
+                  <p class="card-text">Web Site</p>
+                </div>
+              </a>
             </li>
             <li class="card-item">
-              <article class="card">
-                <a href="" class="work-link link">
-                  <div class="card-thumb">
-                    <img
-                      src="./images/coffee.jpg"
-                      alt="A cup of coffee with milk"
-                      width="360"
-                      height="300"
-                      class="img-work"
-                    />
-                  </div>
-                  <div class="content">
-                    <h2 class="card-title">Fresh Coffee</h2>
-                    <p class="card-text">Web Site</p>
-                  </div>
-                </a>
-              </article>
+              <a href="" class="work-link link">
+                <div class="card-thumb">
+                  <img
+                    src="./images/coffee.jpg"
+                    alt="A cup of coffee with milk"
+                    width="360"
+                    height="300"
+                    class="img-work"
+                  />
+                </div>
+                <div class="content">
+                  <h2 class="card-title">Fresh Coffee</h2>
+                  <p class="card-text">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -252,13 +234,15 @@
 
     <footer class="end-page">
       <div class="container">
-        <a href="./index.html" class="footer-logo link"
-          >Web<span class="footer-part">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-content">
+          <a href="./index.html" class="footer-logo link"
+            >Web<span class="footer-part">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
